syntax = "proto3";

package service.v1alpha1;

import "api/common/message.proto";

option go_package = "api/service/v1alpha1;v1alpha1";

message ServicesRequest {
      string name = 1 [json_name = "name"];
      int32 page = 2 [json_name = "page"];
      int32 size = 3 [json_name = "size"];
      int32 project_id = 4 [json_name = "project_id"];
}

message ServiceDetailIdRequest {
      int32 id = 1 [json_name = "id"];
}

message Services {
      repeated Service services = 1 [json_name = "services"];
      int32 total = 2 [json_name = "total"];
}

message Service {
      int32 id = 1 [json_name = "id"];
      string name = 2 [json_name = "name"];
      string labels = 3 [json_name = "labels"];
      common.ResourceQuota resource_quota = 4 [json_name = "resource_quota"];
      repeated Port ports = 5 [json_name = "ports"];
      repeated Volume volumes = 6 [json_name = "volumes"];
      repeated Pod pods = 7 [json_name = "pods"];
      string description = 8 [json_name = "description"];
      int32 user_id = 9 [json_name = "user_id"];
      int32 project_id = 10 [json_name = "project_id"];
      int32 workspace_id = 11 [json_name = "workspace_id"];
      int32 cluster_id = 12 [json_name = "cluster_id"];
}

message Port {
      int32 id = 1 [json_name = "id"];
      string name = 2 [json_name = "name"];
      string path = 3 [json_name = "path"];
      string protocol = 4 [json_name = "protocol"];
      int32 container_port = 5 [json_name = "container_port"];
}

message Volume {
      int32 id = 1 [json_name = "id"];
      string name = 2 [json_name = "name"];
      string mount_path = 3 [json_name = "mount_path"];
      int32 storage = 4 [json_name = "storage"];
      string storage_class = 5 [json_name = "storage_class"];
}

message Pod {
      int32 id = 1 [json_name = "id"];
      string name = 2 [json_name = "name"];
      string node_name = 3 [json_name = "node_name"];
      string status = 4 [json_name = "status"];
}

message GetServiceWorkflowRequest {
      int32 service_id = 1;
      string workflow_type = 2;
}

message Workflow {
      int32 id = 1 [json_name = "id"];
      string name = 2 [json_name = "name"];
      string namespace = 3 [json_name = "namespace"];
      string workflow_type = 4 [json_name = "workflow_type"];
      string description = 5 [json_name = "description"];
      int32 service_id = 6 [json_name = "service_id"];
      repeated WorkflowStep workflow_steps = 7 [json_name = "workflow_steps"];
}

message WorkflowStep {
      int32 id = 1 [json_name = "id"];
      int32 workflow_id = 2 [json_name = "workflow_id"];
      int32 order = 3 [json_name = "order"];
      string name = 4 [json_name = "name"];
      string description = 5 [json_name = "description"];
      repeated WorkflowTask workflow_tasks = 6 [json_name = "workflow_tasks"];
}

message WorkflowTask {
      int32 id = 1 [json_name = "id"];
      int32 workflow_id = 2 [json_name = "workflow_id"];
      int32 step_id = 3 [json_name = "step_id"];
      string name = 4 [json_name = "name"];
      int32 order = 5 [json_name = "order"];
      string task = 6 [json_name = "task"];
      string description = 7 [json_name = "description"];
      string status = 8 [json_name = "status"];
}

message ContinuousIntegrationsRequest {
      int32 service_id = 1 [json_name = "service_id"];
      int32 page = 2 [json_name = "page"];
      int32 page_size = 3 [json_name = "page_size"];
}

message ContinuousIntegrations {
      repeated ContinuousIntegration continuous_integrations = 1 [json_name = "continuous_integrations"];
      int32 total = 2 [json_name = "total"];
}

message ContinuousIntegrationDetailRequest {
      int32 id = 1 [json_name = "id"];
}

message ContinuousIntegration {
      int32 id = 1 [json_name = "id"];
      string version = 2 [json_name = "version"];
      string branch = 3 [json_name = "branch"];
      string tag = 4 [json_name = "tag"];
      string status = 5 [json_name = "status"];
      string description = 6 [json_name = "description"];
      int32 service_id = 7 [json_name = "service_id"];
      int32 user_id = 8 [json_name = "user_id"];
      Workflow workflow = 9 [json_name = "workflow"];
      string logs = 10 [json_name = "logs"];
}

message ContinuousDeploymentsRequest {
      int32 service_id = 1 [json_name = "service_id"];
      int32 page = 2 [json_name = "page"];
      int32 page_size = 3 [json_name = "page_size"];
}

message ContinuousDeployments {
      repeated ContinuousDeployment continuous_deployments = 1 [json_name = "continuous_deployments"];
      int32 total = 2 [json_name = "total"];
}

message ContinuousDeploymentDetailRequest {
      int32 id = 1 [json_name = "id"];
}

message ContinuousDeployment {
      int32 id = 1 [json_name = "id"];
      int32 ci_id = 2 [json_name = "ci_id"];
      int32 service_id = 3 [json_name = "service_id"];
      int32 user_id = 4 [json_name = "user_id"];
      string status = 5 [json_name = "status"];
      Workflow workflow = 6 [json_name = "workflow"];
      string config_path = 7 [json_name = "config_path"];
      string config = 8 [json_name = "config"];
      string logs = 9 [json_name = "logs"];
}

message ApplyServiceRequest {
      int32 service_id = 1 [json_name = "service_id"];
      int32 ci_id = 2 [json_name = "ci_id"];
      int32 cd_id = 3 [json_name = "cd_id"];
}